# coreJSON

./: .gitignore  .gitmodules  .lgtm.yml  CHANGELOG.md  CMakeLists.txt  MISRA.md  README.md  SECURITY.md  jsonFilePaths.cmake  lexicon.txt  loop_invariants.patch  manifest.yml  sbom.spdx
.clusterfuzzlite/: Dockerfile  README.md  build.sh  validate_fuzzer.c
.github/: .cSpellWords.txt  CODEOWNERS  CONTRIBUTING.md  memory_statistics_config.json
_data/: doc_config.json
main/: annotated.html  classes.html  core__json_8c.html  core__json_8h.html  core__json_8h_source.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  group__json__enum__types.html  group__json__struct__types.html  index.html  json_functions.html  json_iterate_function.html  json_search_function.html  json_searchconst_function.html  json_searcht_function.html  json_validate_function.html  modules.html  pages.html  struct_j_s_o_n_pair__t.html
source/: core_json.c
test/: CMakeLists.txt
tools/: uncrustify.cfg
v1.0.0/: core__json_8c.html  core__json_8h.html  core__json_8h_source.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  (+9 more)
(+247 files in other folders)
